# pdfdk-desktop

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/processor/: mod.rs
src-tauri/src/watcher/: mod.rs
