[package]
name = "pdfdk-desktop"
version = "0.2.1"
description = "PDF.dk Desktop - Watched folders for automatic PDF processing"
authors = ["PDF.dk"]
edition = "2021"

[lib]
name = "pdfdk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# File watching
notify = "8"
notify-debouncer-full = "0.4"

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Keyring for secure token storage
keyring = "3"

# Logging
once_cell = "1.19"
chrono = "0.4"
tauri-plugin-updater = "2.10.0"
